src/app/accounts/AccountSelect.scss
@import '../../scss/variables.scss';

.account-select {
  display: block;
  color: white;
  height: 100%;
}

.account {
  display: block;
  cursor: pointer;
  line-height: 15px;
  text-align: left;
  padding-left: 8px;
  padding-right: 8px;
  position: relative;
  padding-top: 6px;
  padding-bottom: 4px;

  &.log-out {
    margin-top: 20px;
  }

  .account-details {
    font-size: 12px !important;
    color: #aaa;
    margin: 1px 0 0 0 !important;
    display: flex;
    flex-direction: row;
    align-items: center;
    // Match the "D2" branding
    font-family: 'Helvetica Neue', 'Helvetica', Arial, sans-serif;

    .app-icon {
      font-size: 14px !important;
      margin: 0 0 0 2px;
      &.first {
        border-left: 1px solid #666;
        padding-left: 4px;
        margin-left: 6px;
      }
      &:hover {
        color: #aaa !important;
      }
    }
  }

  .account-name span {
    margin: 0 !important;
  }

  &:focus,
  &:active {
    outline: none;
  }

  &.selected-account {
    margin: 0 0 0 2px;
    padding-right: 24px;
    border-bottom: 2px solid $orange;
    height: 100%;
    box-sizing: border-box;

    .collapse {
      position: absolute;
      right: 7px;
      top: 13px;
      font-size: 9px;
      color: #ccc;
    }

    &:hover,
    &:focus {
      background-color: #3f3f3f;

      &::after {
        color: white;
      }
    }
  }
}

.accounts-popup {
  position: absolute;
  display: block;
  overflow: auto;
  @include below-header;
  right: 0;
  margin: 0;
  padding: 0;
  min-width: 150px;
  height: fit-content;
  background-color: black;

  .account,
  .log-out {
    &:hover,
    &:focus {
      background-color: #151515;
    }
  }

  .log-out {
    text-align: left;
    padding-left: 8px;
    vertical-align: middle;
    height: 36px;
    display: flex;
    align-items: center;
  }
}

.dropdown {
  h3 {
    margin: 16px 2rem 0 1rem;
    text-transform: uppercase;
    letter-spacing: 1px;
  }

  .account-select {
    height: auto;
    flex: 1;
    flex-shrink: 0;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    padding-bottom: 1em;
  }
  .account {
    padding-left: 1rem;
    padding-right: 2rem;
    &.selected-account {
      height: auto;
      border-bottom: none;
      margin: 0;
      border-left: 4px solid $orange;
      padding-left: calc(1rem - 4px);
      &::after {
        content: none;
      }
    }
    &:hover,
    &:focus {
      background-color: #3f3f3f;
    }
  }
}

